--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,8 @@
 <h1>Posts#new</h1>
 <p>Find me in app/views/posts/new.html.erb</p>
+#form for user to create new blog post
+<%=form_for @post, url:{action: "create"}, html:{class:"newform"} do |f| %>
+<%=f.text_field:title%>
+<%=f.text_area:content%>
+<%=f.submit "Create"%>
+<%end%>
