--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
-<%link_to "Sign Up!", new_user_path%>
+<h1>Frida's Blog</h1>
+<p>Sign In or Sign Up</p>
+<%=link_to "Sign Up!", new_user_path%>
+<%=link_to "Log-in", 'login'%>
