--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,21 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
-#form for user to create new accountfname
-<%=form_for @user, url:{action: "create"}, html:{class:"newform"} do |f| %>
-<%=f.text_field:fname%>
-<%=f.text_field:lname%>
-<%=f.text_field:username%>
-<%=f.text_field:password%>
-<%=f.submit "Create"%>
+<h1>Sign Up!</h1>
+<p>Blog all you want after sign in!</p>
+<%=form_for @user, url:{action: "create"} do |f| %>
+<p>
+  <%=f.label :first_name%><br>
+  <%=f.text_field :fname%>
+</p>
+<p>
+  <%=f.label :last_name%><br>
+  <%=f.text_field :lname%>
+</p>
+<p>
+  <%=f.label :username%><br>
+  <%=f.text_field :username%>
+</p>
+<p>
+<%=f.label :password%><br>
+<%=f.text_field :password%><br>
+<%=f.submit ({:class => "btn btn-primary"})%>
+</p>
 <%end%>
