--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,16 +1,22 @@
 <h1><%= @post.user.fname %>'s Post</h1>
-<p>Find me in app/views/posts/show.html.erb</p>
-<h1>Posts show page</h1>
 <div class="posts">
   <p><%=@post.title%></p>
   <p><%=@post.content%></p>
 </div>
+
+<% if current_user.id == @post.user_id %>
+  <%= link_to 'Edit Post', edit_post_path(@post) %>
+  <%= link_to 'Delete Post', post_path(@post), method: :delete %>
+<% end %>
 
 <div>
   <% @post.comments.each do |comment| %>
     <div>
       <%= comment.user.fname %>:
       <%= comment.comment %>
+      <% if comment.user_id == current_user.id %>
+        <%= link_to 'Delete Comment', comment_path(comment), method: :delete %>
+      <% end %>
     </div>
   <% end %>
 </div>
